[package]
name = "qspi-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = {  git = "https://github.com/embassy-rs/embassy.git", rev = "15c3ae8ef6abaf37704e3278a1de6b2ae259aa15", features = ["defmt", "stm32f777zi", "memory-x", "unstable-pac", "time-driver-any", "exti"]  }
embassy-executor = {  git = "https://github.com/embassy-rs/embassy.git", rev = "15c3ae8ef6abaf37704e3278a1de6b2ae259aa15", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embedded-io-async = { version = "0.6.1" }

defmt = "0.3.6"
defmt-rtt = "0.4.0"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.4"
embedded-hal = "1.0.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
heapless = { version = "0.8.0", default-features = false }
nb = "1.1.0"
critical-section = "1.1.2"
static_cell = "2.1.0"
embedded-alloc = "0.5.1"
